[package]
name = "neolink"
description = "A standards-compliant bridge to Reolink IP cameras"
version = "0.6.3-rc.2"
authors = ["George Hilliard <thirtythreeforty@gmail.com>", "Andrew King <sheepchaan@gmail.com>"]
edition = "2018"
license = "AGPL-3.0-or-later"

[workspace]
members = [
  "crates/*",
]

[dependencies]
anyhow = "1.0.70"
async-stream = "0.3.5"
base64 = "0.22.0"
byte-slice-cast = "1.2.2"
bytes = "1.6.0"
clap = { version = "4.2.2", features = ["derive", "cargo"] }
crossbeam-channel = "0.5.8"
dirs = "5.0.1"
env_logger = "0.11.3"
fcm-push-listener = "2.0.3"
futures = "0.3.28"
gstreamer = "0.22.3"
gstreamer-app = { version = "0.22.0", features = ["v1_18"] }
gstreamer-rtsp = { version = "0.22.0", features = ["v1_18"] }
gstreamer-rtsp-server = { version = "0.22.0", features = ["v1_18"] }
heck = "0.5.0"
log = { version = "0.4.17", features = [ "release_max_level_debug" ] }
md5 = "0.7.0"
neolink_core = { path = "crates/core", version = "0.6.3-rc.2" }
once_cell = "1.19.0"
quick-xml = { version = "0.31.0", features = ["serialize"] }
regex = "1.7.3"
rumqttc = "0.24.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros", "io-util", "tracing"] }
tokio-stream = "0.1.12"
tokio-util = { version = "0.7.7", features = ["full", "tracing"] }
toml = "0.8.2"
validator = "0.17.0"
validator_derive = "0.17.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"
