[package]
name = "neolink_decoder"
description = "A cli decoder for the AES encrypted packets"
version = "0.0.1"
authors = ["Andrew King <sheepchaan@gmail.com>"]
edition = "2018"
license = "AGPL-3.0-or-later"

[dependencies]
aes = "0.8.2"
anyhow = "1.0.42"
cfb-mode = "0.8.2"
env_logger = "*"
hex-string = "0.1.0"
md5 = "0.7.0"
requestty = "0.5.0"
log = "0.4.17"
